--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,12 @@
     "ace-builds": "^1.4.12",
     "aos": "^2.3.4",
     "bootstrap": "^4.0.0",
-    "classnames": "^2.2.6",
     "react": "^17.0.1",
     "react-ace": "^9.3.0",
     "react-dom": "^17.0.1",
     "react-popper": "^2.2.4",
-    "react-script-tag": "^1.1.2",
     "react-scripts": "4.0.2",
+    "react-scroll": "^1.8.2",
     "reactstrap": "^8.9.0",
     "scrollmonitor-react": "^2.4.1",
     "web-vitals": "^1.1.0"
