--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react-ace": "^9.3.0",
     "react-dom": "^17.0.1",
     "react-popper": "^2.2.4",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "react-scroll": "^1.8.2",
     "reactstrap": "^8.9.0",
