--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.7.1",
     "ace-builds": "^1.4.12",
     "aos": "^2.3.4",
+    "axios": "^0.21.1",
     "bootstrap": "^4.0.0",
     "react": "^17.0.1",
     "react-ace": "^9.3.0",
