--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^4.0.0",
     "react": "^17.0.1",
     "react-ace": "^9.3.0",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
     "react-popper": "^2.2.4",
     "react-router-dom": "^5.2.0",
